--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="621.73913043478262" y="659.59821428571422"/>
+            <point key="canvasLocation" x="526" y="978"/>
         </scene>
         <!--Friends-->
         <scene sceneID="nsg-R5-4j5">
@@ -129,9 +129,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="Wiw-ee-84g">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="TJM-j7-lzC">
+                                    <rect key="frame" x="10" y="2" width="394" height="56"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="TJM-j7-lzC" firstAttribute="leading" secondItem="Wiw-ee-84g" secondAttribute="leading" constant="10" id="LYd-8C-hts"/>
+                                <constraint firstItem="TJM-j7-lzC" firstAttribute="centerY" secondItem="Wiw-ee-84g" secondAttribute="centerY" id="h06-sf-5UH"/>
+                                <constraint firstAttribute="trailing" secondItem="TJM-j7-lzC" secondAttribute="trailing" constant="10" id="jzn-qq-HJ6"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FriendCell" id="lNj-fL-5lE" customClass="FriendsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lNj-fL-5lE" id="Uuq-y7-636">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -148,6 +163,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Friends" id="fz9-8y-bYl"/>
+                    <connections>
+                        <outlet property="searchBar" destination="TJM-j7-lzC" id="Bol-CB-xgP"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZpE-E9-782" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="hL3-ra-waN" userLabel="Exit" sceneMemberID="exit"/>
@@ -188,6 +206,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lSp-5T-J1f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3422" y="978"/>
+        </scene>
+        <!--News-->
+        <scene sceneID="cVE-sq-eGg">
+            <objects>
+                <navigationController id="UK6-dt-C2z" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="News" image="newspaper.fill" catalog="system" id="9Xb-Cw-DLw"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SZY-A6-kHc">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="IHd-nJ-65H" kind="relationship" relationship="rootViewController" id="SEC-Cs-9XI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eEf-ls-Jb2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2490" y="1663"/>
+        </scene>
+        <!--News Table View Controller-->
+        <scene sceneID="1T7-8P-neW">
+            <objects>
+                <tableViewController id="IHd-nJ-65H" customClass="NewsTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="MWD-Ad-iHh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Cdn-Fy-wz2">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cdn-Fy-wz2" id="eCZ-CH-2al">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="IHd-nJ-65H" id="kA3-jM-KQy"/>
+                            <outlet property="delegate" destination="IHd-nJ-65H" id="g73-WN-9C4"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="7L2-3t-piP"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R2b-AS-Z3b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3422" y="1663"/>
         </scene>
         <!--Recommended-->
         <scene sceneID="dNw-62-8hR">
@@ -302,14 +366,16 @@
                     <connections>
                         <segue destination="Zcx-K5-FO3" kind="relationship" relationship="viewControllers" id="OGL-d2-KS6"/>
                         <segue destination="TzR-It-oph" kind="relationship" relationship="viewControllers" id="KP1-dH-Axa"/>
+                        <segue destination="UK6-dt-C2z" kind="relationship" relationship="viewControllers" id="xmI-rD-7PQ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="alT-ij-fOf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1470" y="660"/>
+            <point key="canvasLocation" x="1501" y="978"/>
         </scene>
     </scenes>
     <resources>
+        <image name="newspaper.fill" catalog="system" width="128" height="111"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="plus" catalog="system" width="128" height="113"/>
