--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -21,50 +21,66 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BDv-8o-N50">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="512.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="464"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authorization" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csC-2k-Eu5">
-                                                <rect key="frame" x="115" y="100" width="184" height="36"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VK Lite 2.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csC-2k-Eu5">
+                                                <rect key="frame" x="133" y="100" width="148" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.93725490196078431" green="0.81568627450980391" blue="0.56862745098039214" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uw8-hK-TKe">
-                                                <rect key="frame" x="163" y="414.5" width="88" height="48"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                <color key="tintColor" systemColor="systemGreenColor"/>
-                                                <state key="normal" title="Sign in"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uw8-hK-TKe" customClass="SignInButton" customModule="Swift_CustomApp" customModuleProvider="target">
+                                                <rect key="frame" x="157" y="299" width="100" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="ZN7-1a-vAT"/>
+                                                    <constraint firstAttribute="height" constant="40" id="gPP-Mz-CLy"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="tintColor" red="0.52156862749999999" green="0.66666666669999997" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
+                                                <state key="normal" title="Sign In"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                                        <color key="value" red="0.0078431372549019607" green="0.30980392156862746" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                                        <color key="value" red="0.72156862745098038" green="0.8901960784313725" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                        <color key="value" red="0.93725490199999995" green="0.81568627449999997" blue="0.56862745100000001" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="text" value="Sign in"/>
+                                                </userDefinedRuntimeAttributes>
                                                 <connections>
                                                     <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MqH-Fa-QBe"/>
                                                 </connections>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xqA-vh-YJT">
-                                                <rect key="frame" x="10" y="186" width="394" height="153.5"/>
+                                                <rect key="frame" x="10" y="186" width="394" height="78"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35R-Yi-IIF">
-                                                        <rect key="frame" x="168.5" y="0.0" width="57.5" height="29"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your login" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="dNx-qh-UFD">
-                                                        <rect key="frame" x="117" y="39" width="160.5" height="34"/>
+                                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your login" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="dNx-qh-UFD" customClass="TextFieldWithImage" customModule="Swift_CustomApp" customModuleProvider="target">
+                                                        <rect key="frame" x="106" y="0.0" width="182.5" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                                <real key="value" value="7"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="person.circle" catalog="system"/>
+                                                        </userDefinedRuntimeAttributes>
                                                         <connections>
                                                             <outlet property="delegate" destination="BYZ-38-t0r" id="S8D-KR-zev"/>
                                                         </connections>
                                                     </textField>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rzm-fT-llV">
-                                                        <rect key="frame" x="151" y="83" width="92" height="26.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="W7g-hs-KsT">
-                                                        <rect key="frame" x="117" y="119.5" width="160.5" height="34"/>
+                                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="W7g-hs-KsT" customClass="TextFieldWithImage" customModule="Swift_CustomApp" customModuleProvider="target">
+                                                        <rect key="frame" x="106" y="44" width="182.5" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                                <real key="value" value="7"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="key" catalog="system"/>
+                                                        </userDefinedRuntimeAttributes>
                                                         <connections>
                                                             <outlet property="delegate" destination="BYZ-38-t0r" id="HIt-q6-Wiw"/>
                                                         </connections>
@@ -75,16 +91,8 @@
                                                     <constraint firstItem="dNx-qh-UFD" firstAttribute="leading" secondItem="W7g-hs-KsT" secondAttribute="leading" id="dFj-cH-T8t"/>
                                                 </constraints>
                                             </stackView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gt1-rH-6x4" customClass="CloudLoaderIndicator" customModule="Swift_CustomApp" customModuleProvider="target">
-                                                <rect key="frame" x="182" y="354.5" width="50" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="BLK-vH-Qfy"/>
-                                                    <constraint firstAttribute="height" constant="50" id="YSO-cq-bRj"/>
-                                                </constraints>
-                                            </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="KMb-Uh-MpC">
-                                                <rect key="frame" x="150.5" y="472.5" width="113" height="30"/>
+                                                <rect key="frame" x="150.5" y="349" width="113" height="30"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login with" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J56-ta-0cW">
                                                         <rect key="frame" x="0.0" y="0.0" width="78" height="30"/>
@@ -105,16 +113,22 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gt1-rH-6x4" customClass="CloudLoaderIndicator" customModule="Swift_CustomApp" customModuleProvider="target">
+                                                <rect key="frame" x="182" y="399" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="BLK-vH-Qfy"/>
+                                                    <constraint firstAttribute="height" constant="50" id="YSO-cq-bRj"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="Gt1-rH-6x4" firstAttribute="centerX" secondItem="KMb-Uh-MpC" secondAttribute="centerX" id="0oH-ea-TlI"/>
                                             <constraint firstItem="KMb-Uh-MpC" firstAttribute="top" secondItem="Uw8-hK-TKe" secondAttribute="bottom" constant="10" id="1vM-N7-Og1"/>
+                                            <constraint firstAttribute="bottom" secondItem="Gt1-rH-6x4" secondAttribute="bottom" constant="15" id="8M3-Hd-ntx"/>
+                                            <constraint firstItem="Uw8-hK-TKe" firstAttribute="top" secondItem="xqA-vh-YJT" secondAttribute="bottom" constant="35" id="D6E-K9-v7d"/>
                                             <constraint firstItem="csC-2k-Eu5" firstAttribute="centerX" secondItem="BDv-8o-N50" secondAttribute="centerX" id="FIc-GJ-tFH"/>
-                                            <constraint firstItem="Gt1-rH-6x4" firstAttribute="top" secondItem="xqA-vh-YJT" secondAttribute="bottom" constant="15" id="KzO-fX-bln"/>
                                             <constraint firstItem="xqA-vh-YJT" firstAttribute="centerX" secondItem="BDv-8o-N50" secondAttribute="centerX" id="OaJ-07-YOT"/>
-                                            <constraint firstItem="Gt1-rH-6x4" firstAttribute="centerX" secondItem="BDv-8o-N50" secondAttribute="centerX" id="Owm-FL-PvY"/>
-                                            <constraint firstItem="Uw8-hK-TKe" firstAttribute="top" secondItem="Gt1-rH-6x4" secondAttribute="bottom" constant="10" id="PzS-sX-8j3"/>
-                                            <constraint firstAttribute="bottom" secondItem="KMb-Uh-MpC" secondAttribute="bottom" constant="10" id="QLI-f2-RM7"/>
+                                            <constraint firstItem="Gt1-rH-6x4" firstAttribute="top" secondItem="KMb-Uh-MpC" secondAttribute="bottom" constant="20" id="UL4-8E-Ypy"/>
                                             <constraint firstItem="Uw8-hK-TKe" firstAttribute="centerX" secondItem="BDv-8o-N50" secondAttribute="centerX" id="cWe-5w-kS2"/>
                                             <constraint firstAttribute="trailing" secondItem="xqA-vh-YJT" secondAttribute="trailing" constant="10" id="cXL-aM-KRt"/>
                                             <constraint firstItem="xqA-vh-YJT" firstAttribute="leading" secondItem="BDv-8o-N50" secondAttribute="leading" constant="10" id="d9z-ji-3eY"/>
@@ -510,17 +524,27 @@
             <point key="canvasLocation" x="1501" y="978"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="Uw8-hK-TKe">
+            <size key="intrinsicContentSize" width="59" height="36"/>
+        </designable>
+        <designable name="W7g-hs-KsT">
+            <size key="intrinsicContentSize" width="182.5" height="34"/>
+        </designable>
+        <designable name="dNx-qh-UFD">
+            <size key="intrinsicContentSize" width="156.5" height="34"/>
+        </designable>
+    </designables>
     <resources>
         <image name="VK_Compact_Logo" width="960" height="960"/>
+        <image name="key" catalog="system" width="86" height="128"/>
         <image name="newspaper.fill" catalog="system" width="128" height="111"/>
         <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
+        <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
