--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uw8-hK-TKe" customClass="SignInButton" customModule="Swift_CustomApp" customModuleProvider="target">
                                                 <rect key="frame" x="157" y="299" width="100" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="100" id="ZN7-1a-vAT"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="ZN7-1a-vAT"/>
                                                     <constraint firstAttribute="height" constant="40" id="gPP-Mz-CLy"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -58,7 +58,7 @@
                                                 <rect key="frame" x="10" y="186" width="394" height="78"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your login" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="dNx-qh-UFD" customClass="TextFieldWithImage" customModule="Swift_CustomApp" customModuleProvider="target">
-                                                        <rect key="frame" x="106" y="0.0" width="182.5" height="34"/>
+                                                        <rect key="frame" x="117" y="0.0" width="160.5" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                         <userDefinedRuntimeAttributes>
@@ -72,7 +72,7 @@
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="W7g-hs-KsT" customClass="TextFieldWithImage" customModule="Swift_CustomApp" customModuleProvider="target">
-                                                        <rect key="frame" x="106" y="44" width="182.5" height="34"/>
+                                                        <rect key="frame" x="117" y="44" width="160.5" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                                         <userDefinedRuntimeAttributes>
@@ -150,7 +150,6 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PD6-Mq-DHR"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="hbt-4h-YIA" secondAttribute="trailing" id="04z-2t-DXr"/>
                             <constraint firstItem="hbt-4h-YIA" firstAttribute="top" secondItem="jrx-WG-dsp" secondAttribute="top" id="K1X-SJ-ZiX"/>
@@ -526,13 +525,13 @@
     </scenes>
     <designables>
         <designable name="Uw8-hK-TKe">
-            <size key="intrinsicContentSize" width="59" height="36"/>
+            <size key="intrinsicContentSize" width="60" height="36"/>
         </designable>
         <designable name="W7g-hs-KsT">
-            <size key="intrinsicContentSize" width="182.5" height="34"/>
+            <size key="intrinsicContentSize" width="160.5" height="34"/>
         </designable>
         <designable name="dNx-qh-UFD">
-            <size key="intrinsicContentSize" width="156.5" height="34"/>
+            <size key="intrinsicContentSize" width="129.5" height="34"/>
         </designable>
     </designables>
     <resources>
